# stocks-monitor

./: README.md
backend/: package.json
backend/src/: app.ts  config.ts  index.ts  types.ts
cli/: Cargo.toml
daily-task/: index.js  package.json  sendEmail.js  task.js
daily_task/: README.md  db.js  package.json  sendErrorEmail.js  task.js
frontend/: next.config.ts  package-lock.json  package.json
parser/: README.md  docs.md
parser/evaluator_core/: .gitignore  Cargo.toml
parser/evaluator_core/examples/: demo.rs  test.txt
parser/evaluator_core/src/: apis.rs  context.rs  eval_filter.rs  eval_plot.rs  eval_sort.rs  evaluator.rs  functions.rs  helpers.rs  lib.rs  response.rs  response_types.rs  types.rs
parser/evaluator_core/src/functions/: bb.rs  functions.rs  ma.rs  mod.rs  rsi.rs
parser/interpreter_core/: Cargo.toml
parser/parser_core/: Cargo.toml
parser_server/: Cargo.toml
parser_server/src/: main.rs
scripts/: .gitignore  LJSE_EndOfDayData_EUR.bts  README.md  config.js  get.js  get_financials_si.js  get_indexes_metadata.js  get_stocks_metadata.js  get_wiener.js  ljse_financials.json  package-lock.json  package.json  scrape-ljse.js  sync.js  upload_index_members.js  upload_indexes.js  upload_stocks.js
scripts/data_indexes/: ADRPR.json  C10TR.json  CBX.json  CBX10.json  CBXPL.json  CBXPR.json  CBXTR.json  SBITOP.json  SBITR.json
scripts/data_stocks/: ADPL.json  ADRS2.json  ARNT.json  ATGR.json  AUHR.json  BSQR.json  CICG.json  DDJH.json  DLKV.json  EQNX.json  ERNT.json  (+33 more)
sql/: financials_schema.sql  schema.sql
test/: Cargo.toml  diesel.toml
(+150 files in other folders)
