[package]
name = "parser_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
evaluator_core = { path = "../parser/evaluator_core" }
