[package]
name = "evaluator_core"
version = "0.1.0"
edition = "2024"

[dependencies]
parser_core = { path = "../parser_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
env_logger = "0.11.8"
