[package]
name = "evaluator_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
parser_core = { path = "../parser_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
gloo-utils = "0.2.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
futures = "0.3.31"
console_log = "1.0.0"
